--- a/src/legal_mentions.html
+++ b/src/legal_mentions.html
@@ -4,12 +4,25 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- preload font -->
+        <link rel="preload" as="font" href="./ressources/fonts/manrope_400.woff2" type="font/woff2" crossorigin="anonymous">
+        <link rel="preload" as="font" href="./ressources/fonts/manrope_700.woff2" type="font/woff2" crossorigin="anonymous">
+        <!-- preload image-->
+        <link rel="preload" as="image" href="./ressources/images/logo_495x205.webp"
+        imagesrcset="./ressources/images/logo_250x104.webp 250w, ./ressources/images/logo_495x205.webp 495w"
+        imagesizes="(max-width: 1140px) 250px, 495px">
+        <!-- favicon + preload-->
+        <link rel="preload" as="image" href="./ressources/images/favicon_50x50.webp" onload="this.rel='shortcut icon'">
+        <noscript>
+            <link rel="shortcut icon" sizes="50x50" href="./ressources/images/favicon_50x50.webp">
+        </noscript>
         <!--meta tag google -->
         <meta name="description" content="Exercise 6 of Javascript : To Do List - Legal mentions">
         <!--document title -->
         <title>To Do List - Legal mentions</title>
     </head>
     <body id="body_mentions" class="light_mode_body "> <!--transition_out-->
+        
     </body>
     
 </html>
