ci: optimisation of structure
begining of structure pages optimisation

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <!--document title -->
         <title>To Do List</title>
     </head>
-    <body id="main_body" class="light_mode with_search_bar"> <!-- transition_out -->
+    <body id="main_body" class="light_mode with_search_bar transition_out">
         <div id="main_div"></div>
         <template>
         </template>
