--- a/src/legal_mentions.html
+++ b/src/legal_mentions.html
@@ -21,7 +21,7 @@
         <!--document title -->
         <title>To Do List - Legal mentions</title>
     </head>
-    <body id="body_mentions" class="light_mode_body "> <!--transition_out-->
+    <body id="body_mentions" class="light_mode_body transition_out"> 
         
     </body>
     
