ci: start adding task with template
create template for task, end of dialog for adding task

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,21 @@
     <body id="main_body" class="light_mode with_search_bar transition_out">
         <div id="main_div"></div>
         <template>
+            <div class="item" draggable="true">
+                <div id="task_header">
+                    <h2 class="task_title">test</h2>
+                    <div>
+                        <p>
+                            <button class="task_btn_options">...</button>
+                        </p>
+                        <p>
+                            <input type="checkbox" class="task_select">
+                        </p>
+                    </div>
+                </div>
+                <p class="task_date"> test</p>
+                <p class="task_description">test </p>
+            </div>
         </template>
     </body>
     
