ci: continue adding task with template
create object and set in local storage

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <template>
             <div class="item" draggable="true">
                 <div id="task_header">
-                    <h2 class="task_title">test</h2>
+                    <h2 class="task_title"></h2>
                     <div>
                         <p>
                             <button class="task_btn_options">...</button>
@@ -36,8 +36,8 @@
                         </p>
                     </div>
                 </div>
-                <p class="task_date"> test</p>
-                <p class="task_description">test </p>
+                <p class="task_date"></p>
+                <p class="task_description"></p>
             </div>
         </template>
     </body>
